# odoo-mcp-dotbook

./: .env.example  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
mcp_server_odoo/: __init__.py  __main__.py  access_control.py  config.py  error_handling.py  error_sanitizer.py  formatters.py  logging_config.py  odoo_connection.py  performance.py  resources.py  schemas.py  server.py  tools.py  uri_schema.py
tests/: test_access_control.py  test_advanced_resources.py  test_basic_resources.py  test_caching.py  test_config.py  test_data_formatting.py  test_e2e_yolo.py  test_error_handling.py  test_error_sanitization_integration.py  test_error_sanitizer.py  test_keepalive_recovery_e2e.py  test_odoo_connection_basic.py  test_odoo_connection_crud.py  test_performance.py  test_search_resources.py  test_server_foundation.py  test_tools.py  test_tools_yolo.py  test_uri_schema.py  test_write_operations.py  test_write_tools.py  test_xmlrpc_operations.py
tests/docker/test-lb/: compose.yml  nginx.conf
tests/helpers/: flaky_proxy.py
